--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -11,3 +11,7 @@ user4_email=user4@gmail.com
 user4_password=user4Passsword
 
 url=https://test.hypnotes.net/
+login_url=https://test.hypnotes.net/login
+
+therapistEmail= therapist2023@mailsac.com
+therapistPassword= 12ASDasd.,asdASD34
