--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -11,3 +11,5 @@ user4_email=user4@gmail.com
 user4_password=user4Passsword
 
 url=https://test.hypnotes.net/
+therapistEmail= lilyfoster1987@gmail.com
+therapistPassword= Test123.
