--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -12,8 +12,10 @@ user4_password=user4Passsword
 
 url=https://test.hypnotes.net/
 login_url=https://test.hypnotes.net/login
-therapistEmail= therapist2023@mailsac.com
-therapistPassword= 12ASDasd.,asdASD34
+therapistEmail=threapistlions@yopmail.com
+therapistPassword=Test123.
+clientEmail=clienttlions@yopmail.com
+clientPassword=Test123.
 resetpassword=123456789mM@
 hypnotes=https://test.hypnotes.net/
 validEmail=testhypnotes@yopmail.com
