pageload wait added

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -12,11 +12,14 @@ user4_password=user4Passsword
 
 url=https://test.hypnotes.net/
 login_url=https://test.hypnotes.net/login
-therapistEmail=threapistlions@yopmail.com
-therapistPassword=Test123.
-clientEmail=clienttlions@yopmail.com
-clientPassword=Test123.
+therapistEmail= therapist2023@mailsac.com
+therapistPassword= 12ASDasd.,asdASD34
 resetpassword=123456789mM@
 hypnotes=https://test.hypnotes.net/
 validEmail=testhypnotes@yopmail.com
+therapistEmailUSA=threapistlions@yopmail.com
+therapistPasswordUSA=Test123.
+clientEmailUSA=clienttlions@yopmail.com
+clientPasswordUSA=Test123.
+
 
