--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -17,6 +17,9 @@ resetpassword=123456789mM@
 hypnotes=https://test.hypnotes.net/
 validEmail=testhypnotes@yopmail.com
 
+loginEmail=fatihfrance@yopmail.com
+loginPassword=123456789Aa@
+
 
 
 
