--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -25,7 +25,8 @@ clientPasswordUSA=Test123.
 loginEmail=fatihfrance@yopmail.com
 loginPassword=123456789Aa@
 
-
+therapistEmailGul=gulyalcin2022@gmail.com
+therapistPasswordGul=Endemik38*
 
 
 
