--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -18,8 +18,8 @@ therapistPassword= 12ASDasd.,asdASD34
 resetpassword=123456789mM@
 hypnotes=https://test.hypnotes.net/
 validEmail=testhypnotes@yopmail.com
-therapistEmailUSA=threapistlionsusa@yopmail.com
-therapistPasswordUSA=Test123.!
+therapistEmailUSA=threapistlions@yopmail.com
+therapistPasswordUSA=Test123.
 clientEmailUSA=clienttlions@yopmail.com
 clientPasswordUSA=Test123.
 
