--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -28,7 +28,7 @@ loginPassword=123456789Aa@
 
 therapistEmailGul=gulyalcin2022@gmail.com
 therapistPasswordGul=Endemik38*
-
+userName=gulyalcin
 
 
 
