--- a/pom.xml
+++ b/pom.xml
@@ -155,74 +155,74 @@
 
     </dependencies>
 
-<!--    <build>-->
-<!--        <plugins>-->
+    <build>
+        <plugins>
 
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>3.0.0-M1</version>-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash;                    <parallel>methods</parallel>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                    <threadCount>2</threadCount>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                    <perCoreThreadCount>false</perCoreThreadCount>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                    <forkCount>2</forkCount>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                    <reuseForks>true</reuseForks>&ndash;&gt;-->
-<!--                    <runOrder>alphabetical</runOrder>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <!--                    <parallel>methods</parallel>-->
+                    <!--                    <threadCount>2</threadCount>-->
+                    <!--                    <perCoreThreadCount>false</perCoreThreadCount>-->
+                    <!--                    <forkCount>2</forkCount>-->
+                    <!--                    <reuseForks>true</reuseForks>-->
+                    <runOrder>alphabetical</runOrder>
 
-<!--                    <includes>-->
-<!--                        <include>**/runners/*CukesRunner.java</include>-->
-<!--                        <include>**/runners/*FailedRunner.java</include>-->
-<!--                    </includes>-->
-<!--                    <testFailureIgnore>true</testFailureIgnore>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-<!--            <plugin>-->
-<!--                <groupId>net.masterthought</groupId>-->
-<!--                <artifactId>maven-cucumber-reporting</artifactId>-->
-<!--                <version>5.0.0</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>execution</id>-->
-<!--                        <phase>verify</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>generate</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <projectName>Cucumber HTML Reports</projectName>-->
-<!--                            <outputDirectory>${project.build.directory}</outputDirectory>-->
-<!--                            <inputDirectory>${project.build.directory}</inputDirectory>-->
-<!--                            <jsonFiles>-->
-<!--                                <param>**/cucumber*.json</param>-->
-<!--                            </jsonFiles>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                <version>3.8.0</version>-->
-<!--                <configuration>-->
-<!--                    <source>21</source>-->
-<!--                    <target>21</target>-->
-<!--                    <encoding>UTF-8</encoding>-->
-<!--                    <compilerArgs>-->
-<!--                        &lt;!&ndash; Configure manifold plugin&ndash;&gt;-->
-<!--                        <arg>-Xplugin:Manifold</arg>-->
-<!--                    </compilerArgs>-->
-<!--                    &lt;!&ndash; Add the processor path for the plugin &ndash;&gt;-->
-<!--                    <annotationProcessorPaths>-->
-<!--                        <path>-->
-<!--                            <groupId>systems.manifold</groupId>-->
-<!--                            <artifactId>manifold-ext</artifactId>-->
-<!--                            <version>${manifold.version}</version>-->
-<!--                        </path>-->
+                    <includes>
+                        <include>**/runners/*CukesRunner.java</include>
+                        <include>**/runners/*FailedRunner.java</include>
+                    </includes>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>net.masterthought</groupId>
+                <artifactId>maven-cucumber-reporting</artifactId>
+                <version>5.0.0</version>
+                <executions>
+                    <execution>
+                        <id>execution</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <projectName>Cucumber HTML Reports</projectName>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <inputDirectory>${project.build.directory}</inputDirectory>
+                            <jsonFiles>
+                                <param>**/cucumber*.json</param>
+                            </jsonFiles>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <!-- Configure manifold plugin-->
+                        <arg>-Xplugin:Manifold</arg>
+                    </compilerArgs>
+                    <!-- Add the processor path for the plugin -->
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>systems.manifold</groupId>
+                            <artifactId>manifold-ext</artifactId>
+                            <version>${manifold.version}</version>
+                        </path>
 
-<!--                    </annotationProcessorPaths>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
 
-<!--        </plugins>-->
-<!--    </build>-->
+        </plugins>
+    </build>
 </project>
